# nxdk_ntrc_dyndxt

./: .gdbinit  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
devhost/: CMakeLists.txt  README.md
devhost/cmake/modules/: FindNXDK.cmake  FindNXDK_SDL2.cmake
devhost/src/: debug_output.cpp  debug_output.h  main.cpp  math3d.c  math3d.h  nxdk_ext.h  pbkit_ext.cpp  pbkit_ext.h  renderer.cpp  renderer.h  texture_format.cpp  texture_format.h  texture_generator.cpp  texture_generator.h  texture_stage.cpp  texture_stage.h  vertex_buffer.cpp  vertex_buffer.h
devhost/src/shaders/: vertex_shader_program.cpp  vertex_shader_program.h
src/: cmd_attach.c  cmd_attach.h  cmd_detach.c  cmd_detach.h  cmd_discard_until_flip.c  cmd_discard_until_flip.h  cmd_get_dma_addrs.c  cmd_get_dma_addrs.h  cmd_get_state.c  cmd_get_state.h  cmd_hello.c  cmd_hello.h  cmd_read_aux.c  cmd_read_aux.h  cmd_read_graphics.c  cmd_read_graphics.h  cmd_read_pgraph.c  cmd_read_pgraph.h  cmd_trace_frame.c  cmd_trace_frame.h  cmd_wait_for_stable_push_buffer_state.c  cmd_wait_for_stable_push_buffer_state.h  dxtmain.c  dxtmain.h  kick_fifo.c  pushbuffer_command.c  pushbuffer_command.h  register_defs.h  tracer_state_machine.c  tracer_state_machine.h  xbdm_util.c  xbdm_util.h  xbox_helper.c  xbox_helper.h
src/tracelib/: configure.h.in  exchange_dword.c  exchange_dword.h  kick_fifo.c  kick_fifo.h  ntrc_dyndxt.h  pgraph_command_callbacks.c  pgraph_command_callbacks.h  pushbuffer_command.c  pushbuffer_command.h  register_defs.h  tracer_state_machine.c  tracer_state_machine.h  xbox_helper.c  xbox_helper.h
src/util/: circular_buffer.c  circular_buffer.h  circular_buffer_impl.h  profiler.c  profiler.h
test/: CMakeLists.txt
test/stub/fastmemcpy/: fastmemcpy.h
test/util/circular_buffer/: test_main.cpp
